--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -4,6 +4,15 @@
   justify-content: space-between;
   padding: 10px;
 }
+.header .logo{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header .logo img{
+  margin-right: 15px;
+  margin-top: 7px;
+}
 .header .wrapper {
   display: flex;
   align-items: center;
@@ -41,8 +50,8 @@
   display: inline-block;
   width: 7px;
   height: 7px;
-  top: 10px;
-  right: 165px;
+  top: 8px;
+  right: 65px;
   border-radius: 7.5px;
   background-color: red;
   color: red;
