--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,31 +1,45 @@
-.home{
-    background-color: #E7F0F9; 
-    padding:10px 40px ;
-    border-radius:30px;
-  }
-.home .titel{
-    color: #081836;
-    font-size: 24px;
-    font-weight: 500;
+.home {
+  background-color: #e7f0f9;
+  padding: 10px 40px;
+  border-radius: 40px;
+  position: relative;
 }
-.home  .home-container {
-
-  display: grid; 
-  grid-template-columns: 1fr 1fr; 
-  grid-gap: 20px; 
- 
-
- }
-
-  @media (max-width: 767px) {
-    .home{
-      padding: 20px;
-     }
-    .home  .home-container {
-      grid-template-columns: minmax(200px, 1fr);
-      margin-left: 10px;
-      margin-right: 10px;
-      gap: 10px;
-    }
-     
+.home .titel {
+  color: #081836;
+  font-size: 24px;
+  font-weight: 500;
+}
+.home .home-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+.ellips {
+  width: 60px;
+  height: 60px;
+  border-radius: 60%;
+  background-color: #e7f0f9;
+  position: absolute;
+  left: -30px;
+  top: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.ellips .dot{
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color:#0087CC;
+}
+@media (max-width: 767px) {
+  .home {
+    padding: 20px;
   }
+  .home .home-container {
+    grid-template-columns: minmax(200px, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+    gap: 10px;
+  }
+}
